# nix-search-tui

./: Cargo.toml  LICENSE  README.md  default.nix  flake.nix  result
src/: main.rs
