[package]
name = "nix-search-tui"
version = "0.1.0"
description = "An example generated using the simple-async template"
authors = ["Misael Aguayo <aguayo.misael@gmail.com>"]
license = "MIT"
edition = "2024"

[dependencies]
color-eyre = "0.6.3"
crossterm = { version = "0.28.1", features = ["event-stream"] }
futures = "0.3.31"
itertools = "0.14.0"
ratatui = "0.29.0"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
tokio = { version = "1.40.0", features = ["full"] }
